# optical_factory

./: .dockerignore  .replit  .vercelignore  ARCHITECTURE.md  Dockerfile  Procfile  README.md  fly.toml  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.json  replit.nix  requirements.txt  vercel-backend.json  vercel-simple.json  vercel.json
.devcontainer/: devcontainer.json
api/: index.py
benchmark/: evaluation_results.json  optical_factory_evaluation.py
benchmark/test_data/: simulated_face_data.csv
config/: evaluation_criteria.json
scripts/: train_kmeans_model.py  train_mlp_model.py
src/backend/: main.py  requirements.txt
src/backend/api/: facial_analysis.py  index.py  requirements.txt
src/backend/app/: __init__.py  facial_analysis.py  models.py
src/backend/models/: cluster_to_shape_map.json  kmeans_model.joblib  mlp_label_encoder.joblib  mlp_model.joblib  mlp_scaler.joblib  pca_model.joblib  recommendations.json  scaler.joblib
src/frontend/: package.json
src/frontend/src/components/: App.js  TryOn.js  render.js
src/frontend/src/style/: App.css  TryOn.style.css
src/optical_factory_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/utils/: data_simulation.py
tests/backend/: test_api.py  test_bias_fairness.py  test_facial_analysis.py  test_utils.py
